# AOM-spec-review

./: .gitignore  AOM_comments_testing.docx  HOWTO.md  HOWTO_COMMENT.md  HOWTO_OPENISSUES.md  README.md  pyproject.toml  ~$M_comments_testing.docx
data/: AOM_comments_template.docx
issue_automation/: __init__.py  helpers.py
